--- a/ComBEERtition/app/build.gradle
+++ b/ComBEERtition/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.1"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "com.github.skydoves:colorpicker-compose:1.0.0"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
