--- a/ComBEERtition/app/build.gradle
+++ b/ComBEERtition/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    // Accompanist
+    implementation "com.google.accompanist:accompanist-pager:0.23.0" // Pager
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.23.0" // Pager Indicators
     kapt "androidx.room:room-compiler:$room_version"
     implementation "com.github.skydoves:colorpicker-compose:1.0.0"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
